--- a/CSD2b/tests/synthesizerTest/Makefile
+++ b/CSD2b/tests/synthesizerTest/Makefile
@@ -1,7 +1,7 @@
 CXX= g++
 CXXFLAGS = -I/usr/local/include -Wall -std=c++1z
 LDFLAGS= -ljack
-SOURCE=callback.o audioToFile.o synth.o oscillator.o main.o
+SOURCE=callback.o audioToFile.o triangle.o sine.o oscillator.o main.o
 TARGET=example
 
 $(TARGET) : $(SOURCE)
