--- a/CSD2c/effect/Makefile
+++ b/CSD2c/effect/Makefile
@@ -2,12 +2,12 @@ CXX= g++
 CXXFLAGS = -I/usr/local/include -Wall -std=c++1z
 LDFLAGS=-ljack
 # the cpp files from the current project to include
-SRC_PROJECT = callback.cpp tremolo.cpp main.cpp
+SRC_PROJECT = callback.cpp tremolo.cpp effect.cpp main.cpp
 # the directory to the folder with the shared modules
 CODELIBRARY_PATH = ../../../codeLibrary/
 # the modules to include
 MODULES = oscillators audio
-TARGET = example
+TARGET = example output.csv
 
 # append shared code path prefix to modules
 MODULE_PATHS = $(addprefix $(CODELIBRARY_PATH),$(MODULES))
