--- a/CSD2c/effect/Makefile
+++ b/CSD2c/effect/Makefile
@@ -2,7 +2,7 @@ CXX= g++
 CXXFLAGS = -I/usr/local/include -Wall -std=c++1z
 LDFLAGS=-ljack
 # the cpp files from the current project to include
-SRC_PROJECT = callback.cpp tremolo.cpp effect.cpp main.cpp
+SRC_PROJECT = callback.cpp tremolo.cpp delay.cpp effect.cpp main.cpp
 # the directory to the folder with the shared modules
 CODELIBRARY_PATH = ../../../codeLibrary/
 # the modules to include
