--- a/CSD2c/test/queuetest/Makefile
+++ b/CSD2c/test/queuetest/Makefile
@@ -2,11 +2,10 @@ CXX= g++
 CXXFLAGS = -I/usr/local/include -Wall -std=c++20
 LDFLAGS=-ljack
 # the cpp files from the current project to include
-SRC_PROJECT = callback.cpp main.cpp tremolo.cpp effect.cpp delay.cpp circularBuffer.cpp	chorus.cpp interpolation.cpp allPassFilter.cpp schroedersReverb.cpp queue.cpp
+SRC_PROJECT = main.cpp queue.cpp
 # the directory to the folder with the shared modules
 CODELIBRARY_PATH = ../../codeLibrary/
 # the modules to include
-MODULES = oscillators audio
 TARGET = example output.csv
 
 # append shared code path prefix to modules
