added break and mute when break

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ Thumbs.db
 example
 output
 *.loveJari
+CSD2d/build/pomo/pomo_artefacts/RelWithDebInfo/VST3/Pomodoro Timer.vst3/Contents/MacOS/Pomodoro Timer
+CSD2d/build/pomo/pomo_artefacts/RelWithDebInfo/VST3/Pomodoro Timer.vst3/Contents/MacOS/Pomodoro Timer
