add working pomodoro timer with a auto goto break

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ output
 *.loveJari
 CSD2d/build/pomo/pomo_artefacts/RelWithDebInfo/VST3/Pomodoro Timer.vst3/Contents/MacOS/Pomodoro Timer
 CSD2d/build/pomo/pomo_artefacts/RelWithDebInfo/VST3/Pomodoro Timer.vst3/Contents/MacOS/Pomodoro Timer
+CSD2d/build/pomo/pomo_artefacts/RelWithDebInfo/libPomodoro Timer_SharedCode.a
